--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ requests==2.28.0
 ptvsd==4.3.2 # Required for debugging.
 pyzbar==0.1.9
 imutils==0.5.4
-opencv-python==4.6.0
+opencv-python>=4.6.0
 scikit-image==0.19.3
