--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==2.1.2
 requests==2.28.0
 ptvsd==4.3.2 # Required for debugging.
 pyzbar==0.1.9
+gunicorn>=20.1.0
 imutils==0.5.4
 opencv-python>=4.6.0
 scikit-image==0.19.3
