--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Flask==2.1.2
-requests==2.28.0
+Flask~=1.1.2
+requests==2.26
 ptvsd==4.3.2 # Required for debugging.
 pyzbar==0.1.9
 gunicorn>=20.1.0
 imutils==0.5.4
 opencv-python>=4.6.0
 scikit-image==0.19.3
+click~=7.1
